--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/pmalacho-mit/GenDiscrimSocketServerConcept#readme",
   "dependencies": {
     "socket.io": "^4.5.1",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "typescript": "^4.7.3"
   }
 }
